fix item h2 too long

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -34,7 +34,7 @@
         }
 
         h2 {
-            font-size: 14pt;
+            font-size: 12pt;
             font-weight: 700;
         }
 
